app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 *= require foundation
 *= require nprogress
 *= require nprogress-bootstrap
 *= require pickadate/default
 *= require pickadate/default.date
 */
 @import "foundation_and_overrides";
 @import 'foundation-icons';

/* COLOR VARIABLES */

$main-color: #1E88E5;
$highlight-color: #FFD54F;
$gray-color: #BDBDBD;
.colorBlack {color: black;}

/* COLOR GROUPS */

a i {
  color: white;
}

/* FONT SETTINGS */

.size-48 {
  font-size: 2em;
}

/* HIDDEN */

.hidden {
  display: none;
}

::-webkit-scrollbar {
    display: none;
}

html,body{
  overflow-x:hidden;
}

/* NAVIGATION */

.titleHeading {
  font-size: 1em;
  color: #757575;
  line-height: 48px;
}

.bodyBackgroundColor {
	background-color: #FAFAFA;
	width: 100%;
	height: 100%;
}

/* NAVBAR */

.navbar {
  position: relative;
  height: 3em;
	background-color: $main-color;
}

.alertCenter {
  position: relative;
	color: $highlight-color;
	font-size: 80%;
	text-align: center;
}

.navbar-icon {
  margin-top: .75em;
  margin-left: .75em;
  margin-right: .5em;
  font-size: 1.2em;
}

.navbar-icon-right {
  padding-right: .75em;
}

/* BUTTONS */

.button:hover {
  background:  white;
  color: black;
}

.button {
  background-color: $main-color;
}

.arrangeReturn {
  margin-top: 6em;
  margin-left:20%;
  margin-right:20%;
  width: 60%;
  background: white;
  border: 1px solid black;
  text-align: center;
  radius: 3px;
}

.shoppingCartButton {
  width: 4em;
  height: 4em;
  border: 1px solid #BDBDBD;
  text-align: center;
  line-height: 4em;
  background-color: white;
  box-shadow: 0 1px 0 0 #BDBDBD;

}

.createIngredient {
  margin-top: 40%;
  width: 100%;
  float: right;
  border: 1px solid #BDBDBD;
  box-shadow: 0 2px 0 0 #BDBDBD;
  background-color: white;
  height: 6em;
  line-height: 3em;
  text-align: center;
  i {
    color: black;
  }
}

.itemMainButton {
  width: 33.3%;
  left: 1%;
  border: 1px solid #BDBDBD;
  background-color: white;
  height: 3em;
  float: left;
  right: 1%;
  line-height: 3em;
  text-align: center;
  i {
    color: black;
  }
}


.mainButton {
  border: 1px solid #BDBDBD;
  color: #424242;
  float: right;
  background-color: white;
  padding-left: 1em;
  padding-top: .60em;
  margin: .4em;
  width: 12em;
  height: 4em;
  font-size: 1em;
  border-radius: 3px;
  box-shadow: 0 2px 0 0 #BDBDBD;
  i {
    color: #424242;
  }
}

.cartBreadButton {
  background-color: white;
  float:right;
  padding-left: .5em;
  padding-top: .5em;
  border: 1px solid #BDBDBD;
  margin: .4em;
  width: 25%;
  height: 3em;
  color: #424242;
  font-size: .8em;
  border-radius: 3px;
  i {
    color: #424242;
  }
}

.rootButtonRack{
  position: absolute;
  bottom: 1em;
}

.mainButtonRack{
  position: absolute;
  width: 100%;
  bottom: 0em;
}

.breadButtonRack {
  position: absolute;
  width: 100%;
  bottom: .1em;
  right: .2em;
}

.listButtons {
	background-color: white;
  border: 1px solid #BDBDBD;
	width: 100%;
	height: 4em;
	font-size: 1em;
  line-height: 2em;
	text-align: left;
  color: #424242;
  box-shadow: 0 2px 0 0 #BDBDBD;
  i {
    color: red;
  }
}

.adminButtons {
  position: relative;
  background-color: $main-color;
  width: 66%;
  margin-top: 0.5em;
  left: 17%;
  line-height: 2.5em;
  height: 2.5em;
  color: white;
}


/* TABLES */

.tableCell {
	font-size: 85%;
}

.tableCellWidth {
  padding: 1em;
  background-color: white;
  border: 1px solid #BDBDBD;
  color: #424242;
  height: 4em;
  width: 100%;
  font-size: .8em;
  line-height: 2em;
  text-align: center;
  box-shadow: 0 1px 0 0 #BDBDBD;
}

.ingredientTable {
	height: 80%;
  width: 100%;
	overflow-y: scroll;
  overflow-x: hidden;
}

.cartTable {
	height: 25em;
	overflow-y: scroll;
}

.mainUL {
  position: relative;
  top: 1em;
	list-style-type: none;
	height: 80%;
	width: 100%;
	overflow-y: scroll;
}

table {
  width: 100%;
}

.expiredItem {
	color: red;
}

.freshItem {
	color: green;
}

/* Breadcrumbs */

.navbarExtended {
  position: absolute;
  top: 3em;
  height: 3em;
  width: 100%;
  box-shadow: 0 3px 0 0 #757575;
  overflow-x: scroll;
}

.littleBreadcrumbs {
  position: relative;
  color: #616161;
  font-size: 80%;
}

.lightboxBreadcrumbs {
  position: relative;
  color: #616161;
  bottom: 5px;
  font-size: 80%;
}

.crumbs {
	font-size: 90%;
	line-height: 2.3em;
  color: #757575;
}

ul.breadcrumbs li:before {
  content: ">";
}

/* ADMIN */

.adminContainer {
	width: 100%;
  text-align: center;
}

.itemContainer {
  margin: 2em;
  height: 100%;
  font-size: 90%;
}

.adminControlContainer {
  margin-top: 4em;
  margin-left: 25px;
  margin-right: 5px;
  padding-right: 10px;
  overflow-y: scroll;
  overflow-x: hidden;
  height: 80%;
  ul {
    margin-right: 10px;
  }
}a

.addSublocation {
  padding: .75em;
  margin-right: 1em;
  text-align: center;
  height: 2.5em;
  line-height: 3em;
  background-color: #81C784;
}

.deleteSublocation {
  margin-left: .25em;
  padding: .75em;
  width: 4em;
  height: 2.8em;
  text-align: center;
  line-height: 3em;
  background-color: #FF5722;
}

.deleteSublocationLight {
  margin-left: .25em;
  padding: .75em;
  width: 4em;
  height: 2.8em;
  text-align: center;
  line-height: 3em;
  background-color: #FF8A65;
}

.deleteSublocationLighter {
  margin-left: .25em;
  padding: .75em;
  width: 4em;
  height: 3em;
  text-align: center;
  line-height: 3em;
  background-color: #FFCCBC;
}

.adminLocationList {
  background-color: white;
  list-style: none;
  border: 1px solid black;
  font-size: 80%;
}

.adminLocationListRoot {
  background-color: $highlight-color;
  list-style: none;
  border: 1px solid black;
  font-size: 85%;
}

/* LIGHTBOX MODAL */

.bodyBackgroundColor {
  position: relative;
}

.backdrop {
  position: absolute;
  top:0; left:0; right:0; bottom:0;
  background: rgba(#000, .5);
  z-index: 9998;
}

.lightboxButtonBlockTop {
  position: relative;
  left: 7px;
  bottom: 10px;
}

.lightboxButtonBlockBottom {
  position: relative;
  left: 7px;
  bottom: 38px;
}

.lightbox-wrapper {
  position: absolute;
  top:0; left:0; right:0; bottom:0;
  background: rgba(#000, .5);
  z-index: 9999;
}

.quick-links-lightbox {
  background: white;
  height: 415px;
  width: 270px;
  padding: 20px;
  position: absolute;
  top:0; left:0; right:0; bottom:0;
  margin: auto;
  background: white;
  color: #444;
  z-index: 9999;

  hr {
    margin: 10px 0;
  }
}

#newItem {
  position: relative;
  bottom: 11px;
}

#quickAdd {
  position: relative;
  left: 65px;
  bottom: 10px;
}

.lightbox a {
  color: black;
}

.close-lightbox:hover {
  cursor: pointer;
}

.nested_elements {
  margin-left: 30px;
}

/* Garrett's Styles */
/*----------------------------------------------*/

ul {
  list-style-type: none;
  margin-left: 0;
}

.item-name {
  margin-top: 5px;
  margin-bottom: 0px;
  font-weight: 300;
}

.lightbox-flash {
  position: absolute;
  top: 0; right: 0; left: 0;
  font-weight: 200;
  text-align: center;
  color: white;
  background: #1E88E5;
  margin: 0;
  height: 25px;
  line-height: 25px
}

.circle-metrics {
  height:94px;
  margin: 15px 0;
}

.circle-wrapper {
  width: 50%;
  float: left;

  > p {
    text-align: center;
    font-size: 10px;
    margin-top: 3px;
  }

  .circle {
    height: 65px;
    width: 65px;
    border: 1px solid black;
    border-radius: 50%;
    margin: auto;

    p {
      font-size: 30px;
      line-height: 65px;
      text-align: center;
      font-weight: 100;
    }
  }
}

.quick-links {
  li {
    margin-top: 5px;
    &:last-child {
      margin-top: 25px;
      background: #f1f1f1;
    }
    a {
      display: inline-block;
      width: 100%;
      padding: 10px 10px;
      border: 1px solid #BDBDBD;
      font-size: 13px;
      &:hover {
      }
    }
  }
}

.lightbox-small {
  color: #999;
  font-size: 10px;
  margin-bottom: 0;
}

input.datepicker {
  font-size: 30px;
  height: 60px;
  background: white !important;
}

#choose-expiration-wrapper {
  padding-top: 6em;
  width: 80%;
  margin: 0 auto;
  text-align: center;
  button {
    color: black !important;
  }
  input {
    font-size: 1.75em;
    height: 2em;
    background: white;
  }
}

.breadcrumbs {
  white-space:nowrap;
  overflow-x: scroll;
  -webkit-overflow-scrolling: touch;
  padding: 0 15px 0 10px;
  font-size: .9em;
  line-height: 48px;
  a {
    color: #08c;
  }
  > * {
    float: initial;
    font-size: 1em;
      &:before {
        content: "";
        margin: 0;
      }
  }
}

